@@ -29,7 +29,6 @@ import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
 import com.facebook.buck.model.BuildTargets;
 import com.facebook.buck.model.InternalFlavor;
-import com.facebook.buck.rules.BuildRuleParams;
 import com.facebook.buck.rules.BuildRuleResolver;
 import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
@@ -37,19 +36,18 @@ import com.facebook.buck.rules.FakeBuildContext;
 import com.facebook.buck.rules.FakeBuildableContext;
 import com.facebook.buck.rules.FakeSourcePath;
 import com.facebook.buck.rules.HashedFileTool;
+import com.facebook.buck.rules.PathSourcePath;
 import com.facebook.buck.rules.RuleKeyObjectSink;
 import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
 import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.rules.SourcePathRuleFinder;
 import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.TestBuildRuleParams;
 import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
 import com.facebook.buck.rules.coercer.FrameworkPath;
 import com.facebook.buck.step.Step;
 import com.facebook.buck.step.fs.MkdirStep;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.facebook.buck.testutil.MoreAsserts;
-import com.facebook.buck.util.MoreCollectors;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -58,6 +56,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.hamcrest.Matchers;
 import org.junit.Test;
 
@@ -111,39 +110,40 @@ public class CxxCompilationDatabaseTest {
             .build();
 
     ImmutableSortedSet.Builder<CxxPreprocessAndCompile> rules = ImmutableSortedSet.naturalOrder();
-    BuildRuleParams compileBuildRuleParams =
-        TestBuildRuleParams.create()
-            .withDeclaredDeps(ImmutableSortedSet.of(privateSymlinkTree, exportedSymlinkTree));
+    class FrameworkPathAppendableFunction
+        implements RuleKeyAppendableFunction<FrameworkPath, Path> {
+      @Override
+      public void appendToRuleKey(RuleKeyObjectSink sink) {
+        // Do nothing.
+      }
+
+      @Override
+      public Path apply(FrameworkPath input) {
+        throw new UnsupportedOperationException("should not be called");
+      }
+    }
     rules.add(
         testBuildRuleResolver.addToIndex(
             CxxPreprocessAndCompile.preprocessAndCompile(
                 compileTarget,
                 filesystem,
-                compileBuildRuleParams,
+                ImmutableSortedSet.of(privateSymlinkTree, exportedSymlinkTree),
                 new PreprocessorDelegate(
                     testSourcePathResolver,
                     CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                     CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                     filesystem.getRootPath(),
-                    new GccPreprocessor(new HashedFileTool(Paths.get("preprocessor"))),
+                    new GccPreprocessor(
+                        new HashedFileTool(
+                            PathSourcePath.of(filesystem, Paths.get("preprocessor")))),
                     preprocessorFlags,
-                    new RuleKeyAppendableFunction<FrameworkPath, Path>() {
-                      @Override
-                      public void appendToRuleKey(RuleKeyObjectSink sink) {
-                        // Do nothing.
-                      }
-
-                      @Override
-                      public Path apply(FrameworkPath input) {
-                        throw new UnsupportedOperationException("should not be called");
-                      }
-                    },
+                    new FrameworkPathAppendableFunction(),
                     Optional.empty(),
                     /* leadingIncludePaths */ Optional.empty()),
                 new CompilerDelegate(
-                    testSourcePathResolver,
                     CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    new GccCompiler(new HashedFileTool(Paths.get("compiler"))),
+                    new GccCompiler(
+                        new HashedFileTool(PathSourcePath.of(filesystem, Paths.get("compiler")))),
                     CxxToolFlags.of()),
                 Paths.get("test.o"),
                 FakeSourcePath.of(filesystem, "test.cpp"),
@@ -158,13 +158,13 @@ public class CxxCompilationDatabaseTest {
     testBuildRuleResolver.addToIndex(compilationDatabase);
 
     assertThat(
-        compilationDatabase.getRuntimeDeps(ruleFinder).collect(MoreCollectors.toImmutableSet()),
+        compilationDatabase.getRuntimeDeps(ruleFinder).collect(ImmutableSet.toImmutableSet()),
         Matchers.contains(
             exportedSymlinkTree.getBuildTarget(), privateSymlinkTree.getBuildTarget()));
 
     assertEquals(
         "getPathToOutput() should be a function of the build target.",
-        BuildTargets.getGenPath(filesystem, testBuildTarget, "__%s.json"),
+        BuildTargets.getGenPath(filesystem, testBuildTarget, "__%s/compile_commands.json"),
         testSourcePathResolver.getRelativePath(compilationDatabase.getSourcePathToOutput()));
 
     List<Step> buildSteps =
@@ -177,14 +177,15 @@ public class CxxCompilationDatabaseTest {
 
     CxxCompilationDatabase.GenerateCompilationCommandsJson step =
         (CxxCompilationDatabase.GenerateCompilationCommandsJson) buildSteps.get(1);
-    Iterable<CxxCompilationDatabaseEntry> observedEntries = step.createEntries();
+    Iterable<CxxCompilationDatabaseEntry> observedEntries =
+        step.createEntries().collect(Collectors.toList());
     Iterable<CxxCompilationDatabaseEntry> expectedEntries =
         ImmutableList.of(
             CxxCompilationDatabaseEntry.of(
                 root,
                 root + "/test.cpp",
                 ImmutableList.of(
-                    "compiler",
+                    "/Users/user/src/compiler",
                     "-x",
                     "c++",
                     "-isystem",
