@@ -32,7 +32,6 @@ import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
 import com.facebook.buck.rules.BuildContext;
-import com.facebook.buck.rules.BuildRuleParams;
 import com.facebook.buck.rules.CellPathResolver;
 import com.facebook.buck.rules.CommandTool;
 import com.facebook.buck.rules.DefaultSourcePathResolver;
@@ -48,36 +47,29 @@ import com.facebook.buck.rules.SourcePath;
 import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.rules.SourcePathRuleFinder;
 import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.TestBuildRuleParams;
 import com.facebook.buck.rules.TestCellPathResolver;
 import com.facebook.buck.rules.Tool;
 import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
-import com.facebook.buck.rules.keys.DefaultRuleKeyFactory;
+import com.facebook.buck.rules.keys.TestDefaultRuleKeyFactory;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSortedSet;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
 import org.junit.Test;
 
 public class CxxPreprocessAndCompileTest {
-
   private static class PreprocessorWithColorSupport extends GccPreprocessor {
-
     static final String COLOR_FLAG = "-use-color-in-preprocessor";
 
     public PreprocessorWithColorSupport(Tool tool) {
       super(tool);
-    }
-
-    @Override
-    public Optional<ImmutableList<String>> getFlagsForColorDiagnostics() {
-      return Optional.of(ImmutableList.of(COLOR_FLAG));
     }
   }
 
@@ -95,14 +87,6 @@ public class CxxPreprocessAndCompileTest {
     }
   }
 
-  private static final Preprocessor DEFAULT_PREPROCESSOR =
-      new GccPreprocessor(new HashedFileTool(Paths.get("preprocessor")));
-  private static final Compiler DEFAULT_COMPILER =
-      new GccCompiler(new HashedFileTool(Paths.get("compiler")));
-  private static final Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
-      new PreprocessorWithColorSupport(new HashedFileTool(Paths.get("preprocessor")));
-  private static final Compiler COMPILER_WITH_COLOR_SUPPORT =
-      new CompilerWithColorSupport(new HashedFileTool(Paths.get("compiler")));
   private static final CxxToolFlags DEFAULT_TOOL_FLAGS =
       CxxToolFlags.explicitBuilder()
           .addPlatformFlags(StringArg.of("-fsanitize=address"))
@@ -114,17 +98,39 @@ public class CxxPreprocessAndCompileTest {
   private static final Path DEFAULT_WORKING_DIR = Paths.get(System.getProperty("user.dir"));
   private static final RuleKeyAppendableFunction<FrameworkPath, Path>
       DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION =
-          new RuleKeyAppendableFunction<FrameworkPath, Path>() {
-            @Override
-            public void appendToRuleKey(RuleKeyObjectSink sink) {
-              // Do nothing.
-            }
+          new DefaultFramworkPathSearchPathAppendableFunction();
 
-            @Override
-            public Path apply(FrameworkPath input) {
-              return Paths.get("test", "framework", "path", input.toString());
-            }
-          };
+  private static class DefaultFramworkPathSearchPathAppendableFunction
+      implements RuleKeyAppendableFunction<FrameworkPath, Path> {
+    @Override
+    public void appendToRuleKey(RuleKeyObjectSink sink) {
+      // Do nothing.
+    }
+
+    @Override
+    public Path apply(FrameworkPath input) {
+      return Paths.get("test", "framework", "path", input.toString());
+    }
+  }
+
+  private ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+
+  private Preprocessor DEFAULT_PREPROCESSOR =
+      new GccPreprocessor(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/preprocessor"))));
+  private Compiler DEFAULT_COMPILER =
+      new GccCompiler(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/compiler"))));
+  private Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
+      new PreprocessorWithColorSupport(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/preprocessor"))));
+  private Compiler COMPILER_WITH_COLOR_SUPPORT =
+      new CompilerWithColorSupport(
+          new HashedFileTool(
+              () -> PathSourcePath.of(projectFilesystem, Paths.get("/root/compiler"))));
 
   @Test
   public void inputChangesCauseRuleKeyChangesForCompilation() throws Exception {
@@ -134,16 +140,14 @@ public class CxxPreprocessAndCompileTest {
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    BuildRuleParams params = TestBuildRuleParams.create();
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.<String, String>builder()
-                .put("preprocessor", Strings.repeat("a", 40))
-                .put("compiler", Strings.repeat("a", 40))
+                .put("/root/preprocessor", Strings.repeat("a", 40))
+                .put("/root/compiler", Strings.repeat("a", 40))
                 .put("test.o", Strings.repeat("b", 40))
                 .put("test.cpp", Strings.repeat("c", 40))
-                .put("different", Strings.repeat("d", 40))
+                .put("/root/different", Strings.repeat("d", 40))
                 .put("foo/test.h", Strings.repeat("e", 40))
                 .put("path/to/a/plugin.so", Strings.repeat("f", 40))
                 .put("path/to/a/different/plugin.so", Strings.repeat("a0", 40))
@@ -152,14 +156,13 @@ public class CxxPreprocessAndCompileTest {
     // Generate a rule key for the defaults.
 
     RuleKey defaultRuleKey =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
                         DEFAULT_TOOL_FLAGS),
@@ -172,16 +175,18 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the compiler causes a rulekey change.
 
     RuleKey compilerChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                        new GccCompiler(new HashedFileTool(Paths.get("different"))),
+                        new GccCompiler(
+                            new HashedFileTool(
+                                PathSourcePath.of(
+                                    projectFilesystem, Paths.get("/root/different")))),
                         DEFAULT_TOOL_FLAGS),
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
@@ -193,12 +198,12 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the operation causes a rulekey change.
 
     RuleKey operationChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new PreprocessorDelegate(
                         pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
@@ -210,7 +215,6 @@ public class CxxPreprocessAndCompileTest {
                         Optional.empty(),
                         /* leadingIncludePaths */ Optional.empty()),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
                         DEFAULT_TOOL_FLAGS),
@@ -225,14 +229,13 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the platform flags causes a rulekey change.
 
     RuleKey platformFlagsChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
                         CxxToolFlags.explicitBuilder()
@@ -249,14 +252,13 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the rule flags causes a rulekey change.
 
     RuleKey ruleFlagsChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
                         CxxToolFlags.explicitBuilder()
@@ -273,19 +275,18 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the input causes a rulekey change.
 
     RuleKey inputChange =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
                         DEFAULT_TOOL_FLAGS),
                     DEFAULT_OUTPUT,
-                    FakeSourcePath.of("different"),
+                    FakeSourcePath.of("/root/different"),
                     DEFAULT_INPUT_TYPE,
                     CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                     Optional.empty()));
@@ -301,16 +302,14 @@ public class CxxPreprocessAndCompileTest {
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     final SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    final BuildRuleParams params = TestBuildRuleParams.create();
     final FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
             ImmutableMap.<String, String>builder()
-                .put("preprocessor", Strings.repeat("a", 40))
-                .put("compiler", Strings.repeat("a", 40))
+                .put("/root/preprocessor", Strings.repeat("a", 40))
+                .put("/root/compiler", Strings.repeat("a", 40))
                 .put("test.o", Strings.repeat("b", 40))
                 .put("test.cpp", Strings.repeat("c", 40))
-                .put("different", Strings.repeat("d", 40))
+                .put("/root/different", Strings.repeat("d", 40))
                 .put("foo/test.h", Strings.repeat("e", 40))
                 .put("path/to/a/plugin.so", Strings.repeat("f", 40))
                 .put("path/to/a/different/plugin.so", Strings.repeat("a0", 40))
@@ -318,12 +317,12 @@ public class CxxPreprocessAndCompileTest {
 
     class TestData {
       public RuleKey generate(PreprocessorFlags flags) throws Exception {
-        return new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder)
+        return new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
                     projectFilesystem,
-                    params,
+                    ImmutableSortedSet.of(),
                     new PreprocessorDelegate(
                         pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
@@ -335,7 +334,6 @@ public class CxxPreprocessAndCompileTest {
                         Optional.empty(),
                         /* leadingIncludePaths */ Optional.empty()),
                     new CompilerDelegate(
-                        pathResolver,
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
                         CxxToolFlags.of()),
@@ -351,7 +349,8 @@ public class CxxPreprocessAndCompileTest {
 
     PreprocessorFlags defaultFlags = PreprocessorFlags.builder().build();
     PreprocessorFlags alteredFlags =
-        defaultFlags.withFrameworkPaths(FrameworkPath.ofSourcePath(FakeSourcePath.of("different")));
+        defaultFlags.withFrameworkPaths(
+            FrameworkPath.ofSourcePath(FakeSourcePath.of("/root/different")));
     assertNotEquals(testData.generate(defaultFlags), testData.generate(alteredFlags));
   }
 
@@ -364,8 +363,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    BuildRuleParams params = TestBuildRuleParams.create();
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
             .addPlatformFlags(StringArg.of("-ffunction-sections"))
@@ -379,12 +376,9 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            params,
+            ImmutableSortedSet.of(),
             new CompilerDelegate(
-                pathResolver,
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                DEFAULT_COMPILER,
-                flags),
+                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER, DEFAULT_COMPILER, flags),
             output,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
@@ -393,7 +387,7 @@ public class CxxPreprocessAndCompileTest {
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
-            .add("compiler")
+            .add("/root/compiler")
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
@@ -409,12 +403,11 @@ public class CxxPreprocessAndCompileTest {
   @Test
   public void compilerAndPreprocessorAreAlwaysReturnedFromGetInputsAfterBuildingLocally()
       throws Exception {
-    ProjectFilesystem filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem();
-    CellPathResolver cellPathResolver = TestCellPathResolver.get(filesystem);
-    SourcePath preprocessor = FakeSourcePath.of(filesystem, "preprocessor");
+    CellPathResolver cellPathResolver = TestCellPathResolver.get(projectFilesystem);
+    SourcePath preprocessor = FakeSourcePath.of(projectFilesystem, "preprocessor");
     Tool preprocessorTool = new CommandTool.Builder().addInput(preprocessor).build();
 
-    SourcePath compiler = FakeSourcePath.of(filesystem, "compiler");
+    SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
     Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
 
     SourcePathResolver pathResolver =
@@ -423,19 +416,18 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    BuildRuleParams params = TestBuildRuleParams.create();
     BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
-    filesystem.writeContentsToPath(
+    projectFilesystem.writeContentsToPath(
         "test.o: " + pathResolver.getRelativePath(DEFAULT_INPUT) + " ",
-        filesystem.getPath("test.o.dep"));
-    PathSourcePath fakeInput = FakeSourcePath.of(filesystem, "test.cpp");
+        projectFilesystem.getPath("test.o.dep"));
+    PathSourcePath fakeInput = FakeSourcePath.of(projectFilesystem, "test.cpp");
 
     CxxPreprocessAndCompile cxxPreprocess =
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
-            filesystem,
-            params,
+            projectFilesystem,
+            ImmutableSortedSet.of(),
             new PreprocessorDelegate(
                 pathResolver,
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
@@ -447,7 +439,6 @@ public class CxxPreprocessAndCompileTest {
                 Optional.empty(),
                 /* leadingIncludePaths */ Optional.empty()),
             new CompilerDelegate(
-                pathResolver,
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 DEFAULT_COMPILER,
                 CxxToolFlags.of()),
@@ -464,10 +455,9 @@ public class CxxPreprocessAndCompileTest {
     CxxPreprocessAndCompile cxxCompile =
         CxxPreprocessAndCompile.compile(
             target,
-            filesystem,
-            params,
+            projectFilesystem,
+            ImmutableSortedSet.of(),
             new CompilerDelegate(
-                pathResolver,
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 new GccCompiler(compilerTool),
                 CxxToolFlags.of()),
@@ -488,15 +478,12 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    BuildRuleParams params = TestBuildRuleParams.create();
     Path output = Paths.get("test.o");
     Path input = Paths.get("test.ii");
     Path scratchDir = Paths.get("scratch");
 
     CompilerDelegate compilerDelegate =
         new CompilerDelegate(
-            pathResolver,
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
             COMPILER_WITH_COLOR_SUPPORT,
             CxxToolFlags.of());
@@ -505,7 +492,7 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            params,
+            ImmutableSortedSet.of(),
             compilerDelegate,
             output,
             FakeSourcePath.of(input.toString()),
@@ -534,8 +521,6 @@ public class CxxPreprocessAndCompileTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    BuildRuleParams params = TestBuildRuleParams.create();
     Path output = Paths.get("test.ii");
     Path input = Paths.get("test.cpp");
     Path scratchDir = Paths.get("scratch");
@@ -544,7 +529,7 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
             projectFilesystem,
-            params,
+            ImmutableSortedSet.of(),
             new PreprocessorDelegate(
                 pathResolver,
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
@@ -556,7 +541,6 @@ public class CxxPreprocessAndCompileTest {
                 Optional.empty(),
                 /* leadingIncludePaths */ Optional.empty()),
             new CompilerDelegate(
-                pathResolver,
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 COMPILER_WITH_COLOR_SUPPORT,
                 CxxToolFlags.of()),
@@ -582,8 +566,8 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void testGetGcnoFile() throws Exception {
-    Path input = Paths.get("foo/bar.m.o");
+    Path input = projectFilesystem.resolve("foo/bar.m.o");
     Path output = CxxPreprocessAndCompile.getGcnoPath(input);
-    assertEquals(Paths.get("foo/bar.m.gcno"), output);
+    assertEquals(projectFilesystem.resolve("foo/bar.m.gcno"), output);
   }
 }
